back to top f arrow add

--- a/software.html
+++ b/software.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -538,7 +538,8 @@
                                     <a class="default__button sidebar__button__1" target="_blank"
                                         href="assets/img/download.pdf">Download PDF<i class="icofont-file-pdf"></i></a>
                                     <a class="default__button btn__black" target="_blank"
-                                        href="assets/img/download.docx">Download DOC<i class="icofont-file-document"></i></a>
+                                        href="assets/img/download.docx">Download DOC<i
+                                            class="icofont-file-document"></i></a>
                                 </div>
 
                             </div>
@@ -682,147 +683,159 @@
                 </div>
             </div>
             <!-- brand__start -->
-             
+
             <!-- footer start -->
-        <div class="footer position-relative sp_top_250 pink__bg__color" id="footer__area"
-        style="background-image: url(assets/img/footer/footer_1.png);">
+            <div class="footer position-relative sp_top_250 pink__bg__color" id="footer__area"
+                style="background-image: url(assets/img/footer/footer_1.png);">
 
-        <div class="bastun__brand__badge bastun__brand__badge__footer">
-            <div class="bastun__brand__badge__inner position-relative">
-                <a href="index.html">
+                <div class="bastun__brand__badge bastun__brand__badge__footer">
+                    <div class="bastun__brand__badge__inner position-relative">
+                        <a href="index.html">
 
-                    <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
-                    <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png" alt="Footer icon badge">
-                </a>
-            </div>
-        </div>
-
-        <div class="container">
-            <div class="footer__wrapper sp_bottom_110">
-                <div class="row">
-                    <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
-                        <div class="footer__widget footer__left">
-                            <div class="footer__logo">
-                                <img src="assets/img/logo/full-logo.svg" alt="">
-                            </div>
-                            <div class="footer__text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt labore et dolore magna aliqua</p>
-                            </div>
-                            <div class="footer__icon">
-                                <ul>
-                                    <li>
-                                        <a href="#"><i class="icofont-facebook"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="icofont-twitter"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="icofont-skype"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="icofont-linkedin"></i></a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-2 col-lg-6 col-md-6 col-sm-6" data-aos="fade-up" data-aos-duration="2000">
-                        <div class="footer__widget footer__support">
-                            <div class="footer__menu__title">
-                                <h6>SUPPORT :</h6>
-                            </div>
-                            <div class="footer__menu">
-                                <ul>
-                                    <li>
-                                        <a href="#">Home</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">About us</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Blog update</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Our services</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Testimonial</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-2 col-lg-6 col-md-6 col-sm-6" data-aos="fade-up" data-aos-duration="2500">
-                        <div class="footer__widget footer__quick">
-                            <div class="footer__menu__title">
-                                <h6>QUICK LINKS :</h6>
-                            </div>
-                            <div class="footer__menu">
-                                <ul>
-                                    <li>
-                                        <a href="#">Privacy & policy</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Terms & conditions</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">FAQ</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Customer support</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Contact us</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="3000">
-                        <div class="footer__widget footer__right">
-                            <div class="footer__menu__title">
-                                <h6>SUBSCRIP NEWSLETTER :</h6>
-                            </div>
-                            <div class="footer__input">
-                                <input type="text" placeholder="Enter your email:">
-                            </div>
-                            <div class="footer__bottom">
-                                <a class="default__button" href="#">SUBSCRIBE NOW</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="copyright">
-
-                <div class="row align-items-center">
-                    <div class="col-xl-6 col-lg-6 col-md-6 col-12">
-                        <div class="copyright__left">
-                  <p>Copyright © 2024 <a href="index.html">Digitalminds on.</a> All Right Reserved</p>
-                        </div>
-                    </div>
-                    <div class="col-xl-6 col-lg-6 col-md-6 col-12">
-                        <div class="copyright__right">
-                            <ul>
-                                <li>
-                                    <a href="#">Privacy & Policy ||</a>
-                                </li>
-                                <li>
-                                    <a href="#">Terms & Conditions</a>
-                                </li>
-                            </ul>
-
-                        </div>
+                            <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
+                            <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png"
+                                alt="Footer icon badge">
+                        </a>
                     </div>
                 </div>
 
-            </div>
-        </div>
-    </div>
-    <!-- footer__section__end -->
+                <div class="container">
+                    <div class="footer__wrapper sp_bottom_110">
+                        <div class="row">
+                            <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
+                                <div class="footer__widget footer__left">
+                                    <div class="footer__logo">
+                                        <img src="assets/img/logo/full-logo.svg" alt="">
+                                    </div>
+                                    <div class="footer__text">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                            tempor
+                                            incididunt labore et dolore magna aliqua</p>
+                                    </div>
+                                    <div class="footer__icon">
+                                        <ul>
+                                            <li>
+                                                <a href="#"><i class="icofont-facebook"></i></a>
+                                            </li>
+                                            <li>
+                                                <a href="#"><i class="icofont-twitter"></i></a>
+                                            </li>
+                                            <li>
+                                                <a href="#"><i class="icofont-skype"></i></a>
+                                            </li>
+                                            <li>
+                                                <a href="#"><i class="icofont-linkedin"></i></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-2 col-lg-6 col-md-6 col-sm-6" data-aos="fade-up"
+                                data-aos-duration="2000">
+                                <div class="footer__widget footer__support">
+                                    <div class="footer__menu__title">
+                                        <h6>SUPPORT :</h6>
+                                    </div>
+                                    <div class="footer__menu">
+                                        <ul>
+                                            <li>
+                                                <a href="#">Home</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">About us</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Blog update</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Our services</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Testimonial</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-2 col-lg-6 col-md-6 col-sm-6" data-aos="fade-up"
+                                data-aos-duration="2500">
+                                <div class="footer__widget footer__quick">
+                                    <div class="footer__menu__title">
+                                        <h6>QUICK LINKS :</h6>
+                                    </div>
+                                    <div class="footer__menu">
+                                        <ul>
+                                            <li>
+                                                <a href="#">Privacy & policy</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Terms & conditions</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">FAQ</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Customer support</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Contact us</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12" data-aos="fade-up"
+                                data-aos-duration="3000">
+                                <div class="footer__widget footer__right">
+                                    <div class="footer__menu__title">
+                                        <h6>SUBSCRIP NEWSLETTER :</h6>
+                                    </div>
+                                    <div class="footer__input">
+                                        <input type="text" placeholder="Enter your email:">
+                                    </div>
+                                    <div class="footer__bottom">
+                                        <a class="default__button" href="#">SUBSCRIBE NOW</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
+                    <div class="copyright">
+
+                        <div class="row align-items-center">
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-12">
+                                <div class="copyright__left">
+                                    <p>Copyright © 2024 <a href="index.html">Digitalminds on.</a> All Right Reserved</p>
+                                </div>
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-12">
+                                <div class="copyright__right">
+                                    <ul>
+                                        <li>
+                                            <a href="#">Privacy & Policy ||</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Terms & Conditions</a>
+                                        </li>
+                                    </ul>
+
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <!-- footer__section__end -->
+            <!-- back to top -->
+            <a href="#top" class="back-to-top" id="backToTop">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up">
+                    <path d="M12 19V6M5 12l7-7 7 7" />
+                </svg>
+            </a>
+            <!-- back to top -->
 
 
 
