--- a/team-details.html
+++ b/team-details.html
@@ -1299,7 +1299,13 @@
             </div>
         </div>
         <!-- footer__section__end -->
-
+    <!-- back to top -->
+    <a href="#top" class="back-to-top" id="backToTop">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up">
+            <path d="M12 19V6M5 12l7-7 7 7"/>
+        </svg>
+    </a>
+           <!-- back to top -->
 
 
 
