service Side manu fix

--- a/itexpert.html
+++ b/itexpert.html
@@ -480,7 +480,7 @@
 
                             </div>
 
-                            <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="1800">
+                            <!-- <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="1800">
 
                                 <div class="sidebar__title">
                                     <h5>All Services:</h5>
@@ -526,9 +526,71 @@
                                     </ul>
                                 </div>
 
+                            </div> -->
+
+                            <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="1800">
+
+                                <div class="sidebar__title">
+                                    <h5>All Services:</h5>
+                                </div>
+                                <div class="sidebar__list">
+                                    <ul>
+                                        <li>
+                                            <a class="sidebar__common__input" href="#">Web Development
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+
+                                        <li>
+                                            <a class="sidebar__common__input" href="#">Software Development
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+
+                                        <li>
+                                            <a class="sidebar__common__input" href="#">App Development
+
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+
+                                        <li>
+                                            <a class="sidebar__common__input" href="#">Digital Marketing
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+
+                                        <li>
+                                            <a class="sidebar__common__input" href="#">WordPress Development
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+
+                                        <li>
+                                            <a class="sidebar__common__input" href="uidesign.html">UI/UX Design
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="sidebar__common__input" href="#">Game Development
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="sidebar__common__input" href="#">SEO Specialist
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="sidebar__common__input" href="#">Content creator
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+
+                                    </ul>
+                                </div>
+
                             </div>
-
-
                             <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
 
                                 <div class="sidebar__title">
