--- a/itexpert.html
+++ b/itexpert.html
@@ -536,32 +536,32 @@
                                 <div class="sidebar__list">
                                     <ul>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Web Development
+                                            <a class="sidebar__common__input" href="webdevelopment.html">Web Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Software Development
+                                            <a class="sidebar__common__input" href="software.html">Software Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">App Development
+                                            <a class="sidebar__common__input" href="appdevelop.html">App Development
 
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Digital Marketing
+                                            <a class="sidebar__common__input" href="digtalmarketing.html">Digital Marketing
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="#">WordPress Development
+                                            <a class="sidebar__common__input" href="wordpress.html">WordPress Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
@@ -572,12 +572,12 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">Game Development
+                                            <a class="sidebar__common__input" href="GameDevelop.html">Game Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="#">SEO Specialist
+                                            <a class="sidebar__common__input" href="seo.html">SEO Specialist
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
