--- a/service-sample.html
+++ b/service-sample.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Home 1 | Bastun- Business Consulting HTML Template</title>
+    <title>Landing Page - Digital Minds On</title>
     <meta name="description" content="Digitalminds on">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
