--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
             document.documentElement.classList.add("is_dark");
         }
-        if (localStorage.getItem("theme-color") === "light") {
+        if (localStorage.getItem("theme-color") === "#4a179b") {
             document.documentElement.classList.remove("is_dark");
         } 
     </script>
@@ -162,9 +162,9 @@
 
                                             </li>
 
-                                            <li><a href="#">Careers </a></li>
-                                            <li><a href="blog.html">BLOG </a></li>
-                                            <li><a href="team.html">Team </a></li>
+                                            <li><a href="#" class="headerarea__has__dropdown">Careers </a></li>
+                                            <li><a href="blog.html" class="headerarea__has__dropdown">BLOG </a></li>
+                                            <li><a href="team.html" class="headerarea__has__dropdown">Team </a></li>
 
                                             <li class="headerarea__common__dropdown"><a
                                                     class="headerarea__has__dropdown" href="contact.html">CONTACT
@@ -354,15 +354,15 @@
         <!-- herobanner__section__end -->
 
         <!-- service__section__start -->
-        <div class="service sp_top_140 sp_bottom_330 special__spacing" id="service__area" data-aos="fade-up">
+     <div class="service sp_top_140 sp_bottom_330 special__spacing aos-init aos-animate" id="service__area" style="background: var(--pinkcolor) url(assets/img/service/service__bg__img.png);" data-aos="fade-up">
             <div class="container mt-5">
                 <div class="about-section d-flex flex-column align-items-center text-center">
                     <div class="row align-items-center">
-                        <div class="col-md-4">
-                            <img src="assets/img/banner/1.jpg" alt="Healthcare professionals" class="img-fluid">
+                        <div class="col-md-4  aos-init aos-animate">
+                            <img src="assets/img/about/about__3.png" data-tilt style="will-change: transform; transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1);" alt="Healthcare professionals" class="img-fluid">
                         </div>
                         <div class="col-md-8">
-                            <h1 class="mt-3 mt-md-0">About By Digital Minds On</h1>
+                            <h1 class="mt-3 mt-md-0 aligned-text">About By Digital Minds On</h1>
                             <p class="mt-2">
                                 Digital Minds On doesn’t just develop software but solutions that revolutionize an
                                 organization’s operations. Our development goal, as your reliable development partner,
@@ -385,12 +385,12 @@
                 <div class="container mt-5">
                     <div class="service-section d-flex flex-column flex-md-row align-items-center">
                         <div class="col-md-6">
-                            <h6 class="text-muted">Our Services</h6>
-                            <h3 class="mb-3">Premier Incredible Services by Digital Minds On Providers</h3>
+                            <h6>Our Services</h6>
+                            <h3 class="mb-3" style=" font-size: 43px; line-height: 50px;">Premier Incredible Services by Digital Minds On Providers</h3>
 
                         </div>
                         <div class="col-md-6 text-center mt-4 mt-md-0">
-                            <p>
+                            <p class="mt-2">
                                 Digital Minds On specializes in delivering cutting-edge software development solutions
                                 tailored to meet the unique needs of modern businesses. Our team of experienced
                                 developers and designers collaborates to create high-quality, efficient, and scalable
@@ -801,7 +801,8 @@
                             Whether you have questions about our software, need technical support, or want to discuss a
                             custom project, our team is ready to assist you.</p>
                         <ul class="list-unstyled-2">
-                            <li><span>
+                            <li>
+                                <span>
                                     <svg width="25" height="25" viewBox="0 0 25 25" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <g clip-path="url(#clip0_1501_3784)">
@@ -831,8 +832,11 @@
                                         </defs>
                                     </svg>
 
-                                </span> Monday - Friday: 8 AM - 5:30 PM <br> Saturday - Sunday: Closed</li>
-                            <li><svg width="25" height="25" viewBox="0 0 25 25" fill="none"
+                                </span>
+                                 Monday - Friday: 8 AM - 5:30 PM </li>
+                                <li class="timeout"><span> Saturday - Sunday: Closed</span></li>
+                            <li>
+                                <svg width="25" height="25" viewBox="0 0 25 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g clip-path="url(#clip0_1501_3772)">
                                         <path
@@ -869,7 +873,8 @@
                                         </clipPath>
                                     </defs>
                                 </svg> +923086582833</li>
-                            <li><svg width="25" height="25" viewBox="0 0 25 25" fill="none"
+                            <li>
+                                <svg width="25" height="25" viewBox="0 0 25 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g clip-path="url(#clip0_1501_3772)">
                                         <path
@@ -1637,7 +1642,7 @@
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
             document.getElementById("light--to-dark-button")?.classList.add("dark--mode");
         }
-        if (localStorage.getItem("theme-color") === "light") {
+        if (localStorage.getItem("theme-color") === "#4a179b") {
             document.getElementById("light--to-dark-button")?.classList.remove("dark--mode");
         } 
     </script>
