--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                         <div class="col-md-4">
                             <div class="p-4 service-card">
                                 <div class="text-center mb-3 image-icon">
-                                    <svg fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                                    <svg fill="#ffffff" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                                         xmlns:xlink="http://www.w3.org/1999/xlink" width="800px" height="800px"
                                         viewBox="0 0 412.996 412.996" xml:space="preserve">
                                         <g>
@@ -450,14 +450,14 @@
                         <div class="col-md-4">
                             <div class="p-4 service-card">
                                 <div class="text-center mb-3 image-icon">
-                                    <svg width="800px" height="800px" viewBox="0 0 16 16" fill="none"
+                                    <svg width="800px" height="800px" viewBox="0 0 16 16" fill="#ffffff"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" clip-rule="evenodd"
                                             d="M16 2H0V7H16V2ZM4 4.5C4 5.05228 3.55228 5.5 3 5.5C2.44772 5.5 2 5.05228 2 4.5C2 3.94772 2.44772 3.5 3 3.5C3.55228 3.5 4 3.94772 4 4.5Z"
-                                            fill="#000000" />
+                                            fill="#ffffff" />
                                         <path fill-rule="evenodd" clip-rule="evenodd"
                                             d="M16 9H0V14H16V9ZM3 12.5C3.55228 12.5 4 12.0523 4 11.5C4 10.9477 3.55228 10.5 3 10.5C2.44772 10.5 2 10.9477 2 11.5C2 12.0523 2.44772 12.5 3 12.5Z"
-                                            fill="#000000" />
+                                            fill="#ffffff" />
                                     </svg>
                                 </div>
                                 <h5 class="text-center">Software Development</h5>
@@ -471,8 +471,8 @@
                         <div class="col-md-4">
                             <div class="p-4 service-card">
                                 <div class="text-center mb-3 image-icon">
-                                    <svg xmlns="http://www.w3.org/2000/svg"
-                                        viewBox="0 0 640 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                                    <svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg"
+                                        viewBox="0 0 640 512">
                                         <path
                                             d="M192 64C86 64 0 150 0 256S86 448 192 448l256 0c106 0 192-86 192-192s-86-192-192-192L192 64zM496 168a40 40 0 1 1 0 80 40 40 0 1 1 0-80zM392 304a40 40 0 1 1 80 0 40 40 0 1 1 -80 0zM168 200c0-13.3 10.7-24 24-24s24 10.7 24 24l0 32 32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0 0 32c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-32-32 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l32 0 0-32z" />
                                     </svg>
@@ -488,7 +488,7 @@
                         <div class="col-md-4">
                             <div class="p-4 service-card">
                                 <div class="text-center mb-3 image-icon">
-                                    <svg fill="#000000" height="800px" width="800px" version="1.1" id="Capa_1"
+                                    <svg fill="#ffffff" height="800px" width="800px" version="1.1" id="Capa_1"
                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                         viewBox="0 0 437.59 437.59" xml:space="preserve">
                                         <g>
@@ -547,7 +547,7 @@
                                         viewBox="0 0 512 512" xml:space="preserve">
                                         <style type="text/css">
                                             .st0 {
-                                                fill: #000000;
+                                                fill: #ffffff;
                                             }
                                         </style>
                                         <g>
@@ -590,7 +590,7 @@
                         <div class="col-md-4">
                             <div class="p-4 service-card">
                                 <div class="text-center mb-3 image-icon">
-                                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                                    <svg fill="#ffffff" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                                         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                         viewBox="0 0 122.88 95.51" style="enable-background:new 0 0 122.88 95.51"
                                         xml:space="preserve">
@@ -617,34 +617,32 @@
                         <div class="col-md-4">
                             <div class="p-4 service-card">
                                 <div class="text-center mb-3 image-icon">
-                                    <svg width="800px" height="800px" viewBox="0 0 100 100"
-                                        xmlns="http://www.w3.org/2000/svg" version="1.1">
-
-                                        <path style="fill:#222222;stroke:#222222"
+                                    <svg width="800px" height="800px" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" version="1.1" fill="#ffffff">
+                                        <path style="fill:#ffffff;stroke:#ffffff"
                                             d="m 14,91 0,4 c 0,0 -2,0 -3,0 -1,0 -2,2 -2,2 1,0 18,0 19,0 0,0 -1,-2 -2,-2 -1,0 -3,0 -3,0 l 0,-4" />
-                                        <path style="fill:#cccccc;stroke:#000000;stroke-width:2px;stroke-linecap:butt"
+                                        <path style="fill:#ffffff;stroke:#ffffff;stroke-width:2px;stroke-linecap:butt"
                                             d="m 2.1,89 c 0,-5 0,-16 0,-20 0,-1 0,-3 1.9,-3 3.9,0 29,0 31,0 2,0 2,2 2,4 0,4 0,17 0,19 0,1 0,2 -3,2 C 32,91 6,91 4,91 2.1,91 2.1,89 2.1,89 z" />
-                                        <path style="fill:#333333;stroke:#cccccc" d="m 4,68 31,0 0,21 -31,0 z" />
-
-                                        <path style="fill:#222222;stroke:#222222"
+                                        <path style="fill:#ffffff;stroke:#ffffff"
+                                            d="m 4,68 31,0 0,21 -31,0 z" />
+                                        <path style="fill:#ffffff;stroke:#ffffff"
                                             d="m 76,91 0,4 c 0,0 -2,0 -3,0 -1,0 -2,2 -2,2 1,0 19,0 20,0 0,0 -1,-2 -2,-2 -1,0 -3,0 -3,0 l 0,-4" />
-                                        <path style="fill:#cccccc;stroke:#000000;stroke-width:2px;stroke-linecap:butt"
+                                        <path style="fill:#ffffff;stroke:#ffffff;stroke-width:2px;stroke-linecap:butt"
                                             d="m 63,89 c 0,-5 0,-16 0,-20 0,-1 0,-3 2,-3 4,0 29,0 31,0 2,0 2,2 2,4 0,4 0,17 0,19 0,1 0,2 -3,2 -2,0 -28,0 -30,0 -2,0 -2,-2 -2,-2 z" />
-                                        <path style="fill:#333333;stroke:#cccccc" d="m 65,68 31,0 0,21 -31,0 z" />
-
-                                        <path style="fill:#222222;stroke:#222222"
+                                        <path style="fill:#ffffff;stroke:#ffffff"
+                                            d="m 65,68 31,0 0,21 -31,0 z" />
+                                        <path style="fill:#ffffff;stroke:#ffffff"
                                             d="m 44,30 0,4 c 0,0 -2,0 -3,0 -1,0 -2,2 -2,2 1,0 19,0 20,0 0,0 -1,-2 -2,-2 -1,0 -3,0 -3,0 l 0,-4" />
-                                        <path style="fill:#cccccc;stroke:#000000;stroke-width:2px;stroke-linecap:butt"
+                                        <path style="fill:#ffffff;stroke:#ffffff;stroke-width:2px;stroke-linecap:butt"
                                             d="m 32,28 c 0,-5 0,-16 0,-20 0,-1 0,-3 2,-3 4,0 29,0 31,0 2,0 2,2 2,4 0,4 0,17 0,19 0,1 0,2 -3,2 -2,0 -28,0 -30,0 -2,0 -2,-2 -2,-2 z" />
-                                        <path style="fill:#333333;stroke:#cccccc" d="m 34,7 31,0 0,21 -31,0 z" />
-
-                                        <path style="fill:none;stroke:#222222;stroke-width:4"
+                                        <path style="fill:#ffffff;stroke:#ffffff"
+                                            d="m 34,7 31,0 0,21 -31,0 z" />
+                                        <path style="fill:none;stroke:#ffffff;stroke-width:4"
                                             d="m 2,51 18,0 0,13 0,-13 78,0 -18,0 0,13 0,-13 -31,0 0,-14" />
-                                        <ellipse cx="49" cy="51" rx="5" ry="5" style="fill:#222222;" />
-                                        <ellipse cx="20" cy="51" rx="5" ry="5" style="fill:#222222;" />
-                                        <ellipse cx="80" cy="51" rx="5" ry="5" style="fill:#222222;" />
-
+                                        <ellipse cx="49" cy="51" rx="5" ry="5" style="fill:#ffffff;" />
+                                        <ellipse cx="20" cy="51" rx="5" ry="5" style="fill:#ffffff;" />
+                                        <ellipse cx="80" cy="51" rx="5" ry="5" style="fill:#ffffff;" />
                                     </svg>
+                                    
                                 </div>
                                 <h5 class="text-center">IT Management Solution</h5>
                                 <div class="divider"></div>
@@ -658,10 +656,10 @@
                             <div class="p-4 service-card">
                                 <div class="text-center mb-3 image-icon">
                                     <svg width="800px" height="800px" viewBox="0 0 512 512" version="1.1"
-                                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#ffffff">
                                         <title>upload-document-note</title>
                                         <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                            <g id="icon" fill="#000000" transform="translate(64.000000, 42.666667)">
+                                            <g id="icon" fill="#fff" transform="translate(64.000000, 42.666667)">
                                                 <path
                                                     d="M298.642975,268.433404 L392.812864,362.603293 L362.642975,392.773183 L319.976085,350.117404 L319.976308,447.956959 L277.309641,447.956959 L277.309085,350.116404 L234.642975,392.773183 L204.473085,362.603293 L298.642975,268.433404 Z M234.666667,7.10542736e-15 L341.333333,106.666667 L341.333,280.469 L298.779055,237.915875 L298.666,238.028 L298.666667,124.339779 L216.993555,42.6666667 L42.6666667,42.6666667 L42.6666667,384 L196.184,384 L234.773299,422.589676 L256.093414,401.26939 L256.101,426.666 L1.42108547e-14,426.666667 L1.42108547e-14,7.10542736e-15 L234.666667,7.10542736e-15 Z M213.333333,298.666667 L213.333,323.361 L195.361,341.333 L64,341.333333 L64,298.666667 L213.333333,298.666667 Z M196,85.3333333 L256,145.333333 L124,277.333333 L64,277.333333 L64,217.333333 L196,85.3333333 Z M195.989333,130.581333 L96,230.570667 L96,245.333333 L110.72,245.333333 L210.730667,145.322667 L195.989333,130.581333 Z"
                                                     id="Combined-Shape">
