--- a/index.html
+++ b/index.html
@@ -439,11 +439,9 @@
                                         </g>
                                     </svg>
                                 </div>
-                                <h5 class="text-center">Medical Billing Services</h5>
+                                <h5 class="text-center">Web Development</h5>
                                 <div class="divider"></div>
-                                <p>Achieve a 99% claims success rate with MedBrigade's comprehensive Revenue Cycle
-                                    Management (RCM) services, designed to streamline healthcare billing with precise,
-                                    error-free claim submissions.</p>
+                                <p>Special web design solutions that let you have safe, effective, and usable web sites, optimised for brand promotion and use.</p>
 
                             </div>
                         </div>
@@ -462,9 +460,7 @@
                                 </div>
                                 <h5 class="text-center">Software Development</h5>
                                 <div class="divider"></div>
-                                <p>Med Brigade's medical coding services guarantee accurate CPT and ICD-10 coding in
-                                    full alignment with AMA and CMS guidelines, enhancing compliance and strengthening
-                                    revenue cycle management for your practice.</p>
+                                <p>Build reusable, effective software solutions enhancing organization’s performance and revenue using modern technologies and solutions.</p>
 
                             </div>
                         </div>
@@ -479,9 +475,7 @@
                                 </div>
                                 <h5 class="text-center">Game Development</h5>
                                 <div class="divider"></div>
-                                <p>With Med Brigade's medical credentialing services, you can trust that your enrollment
-                                    is handled accurately and efficiently&mdash;whether you're launching a new practice
-                                    or seeking re-credentialing.</p>
+                                <p>Play exciting games with our professional team, using the most efficient tools, such as Unreal Engine for GUl.</p>
 
                             </div>
                         </div>
@@ -533,9 +527,7 @@
                                 </div>
                                 <h5 class="text-center">Mobile Application</h5>
                                 <div class="divider"></div>
-                                <p>Achieve a 99% claims success rate with MedBrigade's comprehensive Revenue Cycle
-                                    Management (RCM) services, designed to streamline healthcare billing with precise,
-                                    error-free claim submissions.</p>
+                                <p>Play exciting games with our professional team, using the most efficient tools, such as Unreal Engine for GUl.</p>
 
                             </div>
                         </div>
@@ -581,9 +573,7 @@
                                 </div>
                                 <h5 class="text-center">Search Engine Optimization</h5>
                                 <div class="divider"></div>
-                                <p>Med Brigade's medical coding services guarantee accurate CPT and ICD-10 coding in
-                                    full alignment with AMA and CMS guidelines, enhancing compliance and strengthening
-                                    revenue cycle management for your practice.</p>
+                                <p>Increase website popularity, page ranking and visibility to increase the organic traffic of a specific website thereby promoting business.                                </p>
 
                             </div>
                         </div>
@@ -608,9 +598,7 @@
                                 </div>
                                 <h5 class="text-center">UI/UX Design</h5>
                                 <div class="divider"></div>
-                                <p>With Med Brigade's medical credentialing services, you can trust that your enrollment
-                                    is handled accurately and efficiently&mdash;whether you're launching a new practice
-                                    or seeking re-credentialing.</p>
+                                <p>Improve the client experience with seamless, beautiful UI/UX designs that resonate with your brand or target consumer by the best UI/UX designers.</p>
 
                             </div>
                         </div>
@@ -648,9 +636,7 @@
                                 </div>
                                 <h5 class="text-center">IT Management Solution</h5>
                                 <div class="divider"></div>
-                                <p>Achieve a 99% claims success rate with MedBrigade's comprehensive Revenue Cycle
-                                    Management (RCM) services, designed to streamline healthcare billing with precise,
-                                    error-free claim submissions.</p>
+                                <p>A wide range of information technology services that entails on help desk support, protection services and network solutions for your organization to function as allow expected.</p>
 
                             </div>
                         </div>
@@ -671,11 +657,9 @@
                                         </g>
                                     </svg>
                                 </div>
-                                <h5 class="text-center">Search Engine Optimization</h5>
+                                <h5 class="text-center">Content Creator</h5>
                                 <div class="divider"></div>
-                                <p>Med Brigade's medical coding services guarantee accurate CPT and ICD-10 coding in
-                                    full alignment with AMA and CMS guidelines, enhancing compliance and strengthening
-                                    revenue cycle management for your practice.</p>
+                                <p>Deliver compelling message with SEO optimization, staying on-brand and with flexible and adaptable content for different media.</p>
 
                             </div>
                         </div>
