--- a/software.html
+++ b/software.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>service-Details | Bastun- Business Consulting HTML Template</title>
+    <title>Software Development | Digital MInds On</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -583,6 +583,11 @@
                                         </li>
                                         <li>
                                             <a class="sidebar__common__input" href="#">Content creator
+                                                <i class="icofont-rounded-right"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="sidebar__common__input" href="#">IT Specialists
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
