--- a/error.html
+++ b/error.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="assets/css/glightbox.min.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-
+    <link rel="stylesheet" href="assets/css/responsive.css">
 
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
