--- a/request.html
+++ b/request.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/glightbox.min.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
 
     <!-- pre loader area start -->
     <div id="back__preloader">
