--- a/team.html
+++ b/team.html
@@ -1,9 +1,6 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
 
-
-<!-- Mirrored from html.themewin.com/bastun-preview/bastun/team.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 19 Oct 2024 19:48:52 GMT -->
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -21,6 +18,7 @@
     <link rel="stylesheet" href="assets/css/glightbox.min.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
 
 
     <script>
