--- a/uidesign.html
+++ b/uidesign.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="assets/css/glightbox.min.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
 
 
 
@@ -966,13 +967,6 @@
         </svg>
     </a>
            <!-- back to top -->
-
-
-
-
-
-
-
     </main>
 
 
