--- a/wordpress.html
+++ b/wordpress.html
@@ -19,9 +19,7 @@
     <link rel="stylesheet" href="assets/css/glightbox.min.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-
-
-
+    <link rel="stylesheet" href="assets/css/responsive.css">
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
@@ -797,12 +795,6 @@
                 </svg>
             </a>
                    <!-- back to top -->
-
-
-
-
-
-
     </main>
 
 
