--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -805,6 +805,101 @@
 
 
                                         </div>
+                                        <!-- new-card -->
+                                        <div class="row g-4 horizontal-card">
+                                                <div class="card mb-3">
+                                                    <div class="row g-0">
+                                                      <div class="col-md-4 p-0">
+                                                        <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                                      </div>
+                                                      <div class="col-md-8 p-0">
+                                                        <div class="card-body">
+                                                          <h5 class="card-title">Custom Web Development</h5>
+                                                          <p class="card-text">Digital Minds specializes in custom WordPress
+                                                            web development, enhancing your brand and creating a web
+                                                            presence that aligns perfectly with your business goals.</p>
+                                                        </div>
+                                                      </div>
+                                                    </div>
+                                                </div>
+                                                <div class="card mb-3">
+                                                    <div class="row g-0">
+                                                      <div class="col-md-4 p-0">
+                                                        <img src="..." class="img-fluid rounded-start" alt="...">
+                                                      </div>
+                                                      <div class="col-md-8 p-0">
+                                                        <div class="card-body">
+                                                          <h5 class="card-title">Custom Web Development</h5>
+                                                          <p class="card-text">Digital Minds specializes in custom WordPress
+                                                            web development, enhancing your brand and creating a web
+                                                            presence that aligns perfectly with your business goals.</p>
+                                                        </div>
+                                                      </div>
+                                                    </div>
+                                                </div>
+                                                <div class="card mb-3">
+                                                    <div class="row g-0">
+                                                      <div class="col-md-4 p-0">
+                                                        <img src="..." class="img-fluid rounded-start" alt="...">
+                                                      </div>
+                                                      <div class="col-md-8 p-0">
+                                                        <div class="card-body">
+                                                          <h5 class="card-title">Custom Web Development</h5>
+                                                          <p class="card-text">Digital Minds specializes in custom WordPress
+                                                            web development, enhancing your brand and creating a web
+                                                            presence that aligns perfectly with your business goals.</p>
+                                                        </div>
+                                                      </div>
+                                                    </div>
+                                                </div>
+                                                <div class="card mb-3">
+                                                    <div class="row g-0">
+                                                      <div class="col-md-4 p-0">
+                                                        <img src="..." class="img-fluid rounded-start" alt="...">
+                                                      </div>
+                                                      <div class="col-md-8 p-0">
+                                                        <div class="card-body">
+                                                          <h5 class="card-title">Custom Web Development</h5>
+                                                          <p class="card-text">Digital Minds specializes in custom WordPress
+                                                            web development, enhancing your brand and creating a web
+                                                            presence that aligns perfectly with your business goals.</p>
+                                                        </div>
+                                                      </div>
+                                                    </div>
+                                                </div>
+                                                <div class="card mb-3">
+                                                    <div class="row g-0">
+                                                      <div class="col-md-4 p-0">  
+                                                        <img src="..." class="img-fluid rounded-start" alt="...">
+                                                      </div>
+                                                      <div class="col-md-8 p-0">
+                                                        <div class="card-body">
+                                                          <h5 class="card-title">Custom Web Development</h5>
+                                                          <p class="card-text">Digital Minds specializes in custom WordPress
+                                                            web development, enhancing your brand and creating a web
+                                                            presence that aligns perfectly with your business goals.</p>
+                                                        </div>
+                                                      </div>
+                                                    </div>
+                                                </div>
+                                                <div class="card mb-3">
+                                                    <div class="row g-0">
+                                                      <div class="col-md-4 p-0">
+                                                        <img src="..." class="img-fluid rounded-start" alt="...">
+                                                      </div>
+                                                      <div class="col-md-8 p-0">
+                                                        <div class="card-body">
+                                                          <h5 class="card-title">Custom Web Development</h5>
+                                                          <p class="card-text">Digital Minds specializes in custom WordPress
+                                                            web development, enhancing your brand and creating a web
+                                                            presence that aligns perfectly with your business goals.</p>
+                                                        </div>
+                                                      </div>
+                                                    </div>
+                                                </div>
+                                         
+                                          
+                                        </div>
                                     </div>
                                 </div>
 
