--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                                             <h5 class="card-title">IT Management Solution</h5>
                                             <p class="card-text">A wide range of information technology services that
                                                 entails on help desk support, protection services and network solutions
-                                                for your organization to function as allow expected.</p>
+                                                for your organization to function. </p>
                                         </div>
                                     </div>
                                 </div>
@@ -674,7 +674,7 @@
 
         </div>
         <!-- service__section__end -->
-         
+
         <!-- video__section__start -->
         <div class="video sp_bottom_140 video__nmt" id="video__area" data-aos="fade-up">
             <div class="container-fluid full__width__padding">
